# poe-system

./: .env  .gitignore  .gitmodules  Cargo.nix  Cargo.toml  db_schemas.graphml  docker-compose.yml  elixir-pkg.nix  example-stash.json  flake.nix  init.cql  jq_stream.sh  main.db  module.nix  packages.nix  processes.nix  readme.md  shell.nix  test-query.mongodb  vm.nix
application/: Cargo.toml  saved_itemset.json
application/migrations/: 20250129152111_init_tables.sql
application/src/: calc_set_shared.rs  lib.rs  pipe_stashes.rs  stash_receiver.rs  stream.rs  typed_item.rs  ultimatum.rs
application/src/build_calculation/: comparison.rs  import_pob.rs  mod.rs  mod_config.rs
application/src/storage/: mod.rs  redis.rs
application/src/storage/postgresql/: builds.rs  items.rs  mod.rs
application/tests/: build_calculation.rs
application/tests/common/: mod.rs  pob.xml
domain/: Cargo.toml  build.rs
domain/src/: base_types.rs  data.rs  item.rs  lib.rs  make_stat_translations.sh  stats.rs  stats.txt  types.rs
elixir/priv/native/: Cargo.toml
elixir/priv/native/src/: config.rs  lib.rs
frontend/: Cargo.toml  build.rs  index.html
frontend/css/: style.css
frontend/src/: buildpage.rs  home.rs  main.rs  make_request.rs  pob.rs  pob_retriever.rs
pob/: Cargo.toml
pob/src/: item.rs  lib.rs  parser.rs  pastebin.rs  pob.rs  pob3.txt  pob_retriever.rs  poe_data.rs
pob/src/pob/: item.rs  parser.rs  pob.rs
public_stash/: Cargo.toml
public_stash/src/: client.rs  lib.rs  models.rs  typed_item.rs
public_stash/src/storage/: mod.rs  redis.rs
public_stash/src/storage/postgresql/: mod.rs
rust/application/: Cargo.toml  saved_itemset.json
rust/application/bindings/: BuildInfo.ts  BuildItemsWithConfig.ts  ItemWithConfig.ts  ModConfig.ts  Property.ts  Subcategory.ts
rust/application/migrations/: 20250131084537_add_builds.sql  20250216140457_items_cat_subcat.sql  20250216161038_builds_process_queue.sql  20250313135850_add_item_name.sql
rust/application/src/: build_calculation.rs  lib.rs  pipe_stashes.rs  stash_receiver.rs  typed_item.rs
rust/application/src/build_calculation/: comparison.rs  import_pob.rs  mod.rs  mod_config.rs
rust/application/src/storage/: mod.rs  redis.rs
rust/application/tests/: build_calculation.rs
rust/application/tests/common/: item_repository_dbg.rs  mod.rs
rust/domain/: Cargo.toml  build.rs
rust/domain/bindings/: BuildItemsWithConfig.ts  BuildV1.ts  Category.ts  Config.ts  FoundBuildItems.ts  GemSearchItem.ts  ItemConfig.ts  ItemConfigOption.ts  ItemInfo.ts  ItemWithConfig.ts  Mod.ts  ModConfig.ts  ModOption.ts  ModStatId.ts  ModType.ts  ModValue.ts  Price.ts  Property.ts  RequiredItem.ts  SearchItem.ts  StoredItem.ts  StoredItemInfo.ts  StoredMod.ts  TypedItem.ts
rust/domain/src/: data.rs  item.rs  lib.rs  types.rs
rust/domain/src/build_calculation/: comparison.rs  item_config.rs  mod.rs  mod_config.rs  required_item.rs  stored_item.rs  typed_item.rs
rust/domain/src/item/: types.rs
rust/elixir/: Cargo.toml
rust/elixir/src/: build_calculation.rs  config.rs  lib.rs
rust/pob/: Cargo.toml
rust/pob/src/: build_import_pob.rs  lib.rs  parser.rs  pob.rs  pob2.xml  pob3.xml  pob_gems.xml  pob_new.txt  pob_new.xml  pob_new2.txt  pob_new2.xml
rust/poeninja/: Cargo.toml
rust/poeninja/src/: lib.rs  models.rs  test_models.json
rust/utils/: Cargo.toml
rust/utils/src/limit_middleware/: limits.rs  mod.rs
rust/wasm/: Cargo.toml  LICENSE_MIT
rust/wasm/pkg/: package.json  wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
rust/wasm/src/: lib.rs
server/: .env  .gitignore  Cargo.nix  Cargo.toml  crate-hashes.json  docker-compose.yml  flake.nix  sqlx-data.json
server/configuration/: base.yml
server/migrations/: 20220503164908_init.down.sql  20220503164908_init.up.sql  20220505092124_tasks.down.sql  20220505092124_tasks.up.sql  20220505134747_builds.up.sql  20220516163014_indexes.down.sql  20220516163014_indexes.up.sql
server/migrations/2021-04-26-170240_init/: down.sql  up.sql
server/migrations/2021-06-13-185027_builds_info/: down.sql  up.sql
server/migrations/2021-07-14-140802_pob_table/: down.sql  up.sql
server/src/: configuration.rs  lib.rs  schema.rs  startup.rs
server/src/actors/: actor_util.rs  build_calculator.rs  builds_repository.rs  item_repository.rs  mod.rs  stash_receiver.rs
server/src/application/: build_calculating.rs  configuration.rs  connection_pool.rs  mod.rs  poe_data.rs  startup.rs  stash_receiver.rs
server/src/application/actors/: mod.rs  stash_receiver.rs
server/src/build_calculator/: build_calculator.rs  mod.rs
server/src/build_calculator/domain/: mod.rs
server/src/build_calculator/pob/: pob.rs
server/src/domain/: item.rs  item_repository.rs  mod.rs  types.rs
server/src/domain/configuration/: base.yml
server/src/domain/pob/: item.rs  mod.rs  parser.rs  pob.rs  pob2.txt
server/src/implementations/: builds_repository.rs  connection_pool.rs  http_controller.rs  http_service_layer.rs  item_repository.rs  mod.rs  models.rs  public_stash_retriever.rs  public_stash_timer.rs  wrapped_connection_pool.rs
server/src/implementations/mongo/: items_repository.rs  maps_repository.rs  mod.rs
server/src/implementations/pob/: parser.rs  pob.rs
server/src/implementations/rmdb/: builds_repository.rs  item_repository.rs  mod.rs
server/src/infrastructure/: controller.rs  mod.rs  pob_retriever.rs  poe_data.rs  public_stash_retriever.rs
server/src/infrastructure/repositories/: mod.rs
server/src/interfaces/: mod.rs  public_stash_retriever.rs
server/src/maps/: http_controller.rs  http_service_layer.rs  maps_repository.rs  mod.rs
server/src/ports/outbound/: mod.rs  (+1 more)
server/src/raw_items/: mod.rs
server/src/specs/: mod.rs
server/src/utils/: file_dump.rs  mod.rs
server/tests/: build_calculating_test.rs  build_calculator_test.rs  common.rs  pob.txt  raw_item_repository_test.rs  server.rs
src/: lib.rs  (+4 more)
tradeapi/: Cargo.toml
tradeapi/src/: client.rs  dist.rs  lib.rs  limits.rs  models.rs  query.rs  testcase1.json
tradeapi/src/poe1/: client.rs  dist.rs  models.rs  query.rs
(+344 files in other folders)
