[package]
name = "poe-system"
version = "0.1.0"
authors = ["Igor Gilmutdinov <bladoff@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
anyhow = "1.0.40"
flate2 = "1.0"
roxmltree = "0.14"
actix = "0.10.0"
actix-rt = "1.1"
governor = "0.3.2"
reqwest = { version = "0.11.2", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.4.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "1.0.24"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate" ] }