[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
poeninja = { path = "../poeninja" }
tradeapi = { path = "../tradeapi" }
public_stash = { path = "../public_stash" }
pob = { path = "../pob" }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.25"
tui-textarea = { version = "0.2.0", features = ["crossterm"] }
clipboard = "0.5.0"
clap = { version = "4.4.10", features = ["derive"] }
timely = "0.12.0"
futures = "0.3.29"
itertools = "0.12.0"
anyhow = "1.0.86"
