[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.5" }
serde = { version = "1", features = [ "derive" ] }
strsim = { version = "0.10.0", default-features = false }
strum = { version = "0.24.1", features = [ "derive" ] }
thiserror = "1"
macros = { path = "../macros" }
lazy_static = "1.4.0"

[dev-dependencies]
anyhow = "1"
