[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.14.0" }
serde = { version = "1", features = [ "derive" ] }
strsim = { version = "0.11", default-features = false }
strum = { version = "0.26", features = [ "derive" ] }
thiserror = "2"
macros = { path = "../macros" }
lazy_static = "1.5.0"
serde_json = "1.0.138"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf" ] }
sonic-rs = "0.3.17"
bincode = "1.3.3"
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1"
dashmap = "6.1.0"

[dev-dependencies]
anyhow = "1"
