[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20"
yew-router = "0.17"
yew-hooks = "0.2"
gloo = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.40"
dotenv_codegen = "0.15.0"
thiserror = "1"
wasm-logger = "0.2.0"
log = "0.4.6"
web-sys = "0.3.57"
#base64 = "0.13.0"
#flate2 = "1.0"
#roxmltree = "0.14"