[package]
name = "public_stash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.8.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.11"
tracing = { version = "0.1" }
utils = { path = "../utils" }

[dev-dependencies]
serde_json = "1"
anyhow = "1"
