[package]
name = "public_stash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.8.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.11"
tracing = { version = "0.1" }
utils = { path = "../utils" }
uuid = { version = "1.12.1", features = ["v4"] }
storage = { path = "../storage" }
anyhow = "1"
domain = { path = "../domain" }
async-trait = "0.1.85"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.27", features = ["derive"] }
redis = { version = "0.28.2", features = ["aio", "tokio-comp", "tcp_nodelay"] }
tokio-task-pool = "0.1.5"
async-channel = "2.3.1"

[dev-dependencies]
serde_json = "1"
anyhow = "1"
