[package]
name = "poe-system"
version = "0.1.0"
authors = ["Igor Gilmutdinov <bladoff@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
anyhow = "1.0.40"
flate2 = "1.0"
roxmltree = "0.14"
actix = { version = "0.11.0" }
actix_derive = "0.6.0"
actix-rt = "2.2"
governor = "0.3.2"
tokio = { version = "1.4.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "1.0.24"
syn = { version = "1.0.48", features = ["full"]}
diesel = { version = "1.4.7", default-features = false, features = ["r2d2", "sqlite", "64-column-tables", "extras"] }
diesel_migrations = "1.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
num = "0.4.0"
itertools = "0.10.0"
nom = { version = "6.1.2", features = ["alloc"] }
actix-web = "3"
jsonrpc-v2 = { version = "0.10.1", features = ["actix-web-v3-integration"] }
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
serde-aux = { version = "2.2.0" }
lazy_static = "1.4.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
tracing-actix-web = { version = "0.2" }
tracing-log = "0.1"
r2d2 = "0.8.9"
strsim = "0.10"
ureq = { version = "2", features = [ "json" ] }
mongodb = { version = "2.0" }

[dev-dependencies]
temp-file = "0.1.6"