[package]
name = "tradeapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
governor = "0.3.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.24"
tracing = { version = "0.1" }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde_json = "1"
lazy_static = "1.4.0"
macros = { path = "../macros" }

[dev-dependencies]
anyhow = "1"
