[package]
name = "tradeapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.11"
tracing = { version = "0.1" }
serde_json = "1"
lazy_static = "1.5.0"
macros = { path = "../macros" }
utils = { path = "../utils" }

[dev-dependencies]
anyhow = "1"
