[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
poeninja = { path = "../poeninja" }
tradeapi = { path = "../tradeapi" }
public_stash = { path = "../public_stash" }
pob = { path = "../pob" }
utils = { path = "../utils" }
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.29"
itertools = "0.14.0"
anyhow = "1.0.95"
compress-tools = { version = "0.15.1", features = [
  "async_support",
  "tokio",
  "tokio_support",
] }
uuid = { version = "1.12.0", features = ["v4"] }
async-channel = "2.3.1"
tokio-task-pool = { version = "0.1.5" }
rand = { version = "0.9.0" }
redis = { version = "0.28.2", features = ["aio", "tokio-comp", "tcp_nodelay"] }
async-trait = "0.1.85"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
] }
tracing = "0.1"
metrics = "0.24.1"
config = { version = "0.15.6", default-features = false, features = ["toml"] }
tokio-util = "0.7.13"
dashmap = "6.1.0"
ts-rs = "10.1.0"
tracing-subscriber = "0.3.19"
tracing-flame = "0.2.0"
metrics-exporter-tcp = "0.11.1"

[features]
integration_tests = []
