[package]
name = "elixir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "elixir"
path = "src/lib.rs"

[dependencies]
rustler = { version = "0.36", features = ["serde"] }
pob = { path = "../pob" }
serde_json = "1.0.140"
thiserror = "2.0.12"
domain = { path = "../domain" }
async-trait = "0.1.88"
serde = "1.0.219"
public_stash = { path = "../public_stash" }
