[package]
name = "pob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
flate2 = "1.0"
roxmltree = "0.14"
thiserror = "1.0.24"
syn = { version = "1.0.48", features = ["full"] }
nom = { version = "7.1.3", features = ["alloc"] }
tracing = { version = "0.1" }
domain = { path = "../domain" }
clap = { version = "4.5.28", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
dotenv = "0.15"
anyhow = "1"

[features]
default = ["parsing"]
parsing = []
