[package]
name = "poeninja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
governor = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.24"
tracing = { version = "0.1" }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde_json = "1"
lazy_static = "1.4.0"
macros = { path = "../macros" }
anyhow = "1"

[dev-dependencies]
anyhow = "1"
