[package]
name = "wasm"
version = "0.1.0"
authors = ["Igor Gilmutdinov <bladoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
pob = { path = "../pob", default-features = false }
domain = { path = "../domain" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
thiserror = "2.0.12"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
