[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "native"
path = "src/lib.rs"

[dependencies]
rustler = { version = "0.36", features = ["serde"] }
pob = { path = "../../../rust/pob" }
serde_json = "1.0.140"
thiserror = "2.0.12"
domain = { path = "../../../rust/domain" }
async-trait = "0.1.88"
serde = "1.0.219"
public_stash = { path = "../../../rust/public_stash" }
serde_path_to_error = "0.1.17"
uuid = { version = "1.17.0", features = ["v4"] }
regex = "1.11.1"
ts-rs = "11.0.1"
lazy_static = "1.5.0"

[dev-dependencies]
anyhow = "1.0.98"
